maverick-executor now apply actions implemented in Groovy