@@ -1,48 +1,52 @@
 package gfads.cin.ufpe.maverick.executor;
 
+import java.io.File;
 import java.lang.reflect.Method;
+import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URLClassLoader;
+import java.util.HashMap;
+import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import gfads.cin.ufpe.maverick.events.MaverickChangePlan;
-import gfads.cin.ufpe.maverick.events.MaverickPolicy;
 import gfads.cin.ufpe.maverick.executor.context.Context;
+import groovy.util.GroovyScriptEngine;
 
 @Component
 public class ExecutorCore {
-
-	private String actionsRepository;
-	private ClassLoader classLoader;
-	
 	@Autowired
 	private Context context;
 	
+	private GroovyScriptEngine scriptEngine;
+	private Map<String, Class<?>> classCache = new HashMap<>();
+	
 	public ExecutorCore(@Value("${executor.actions.repository}") String actionsRepository) {
-		this.actionsRepository = actionsRepository;
-		URL url;
+		URL[] urls;
 		try {
-			url = new URL(actionsRepository);
-			classLoader = new URLClassLoader (new URL[] {url}, this.getClass().getClassLoader());
-		} catch (Exception e) {
-			e.printStackTrace();
+			urls = new URL[] {new File(actionsRepository).toURI().toURL()};
+		} catch (MalformedURLException e) {
+			throw new RuntimeException(e);
 		}
+		scriptEngine = new GroovyScriptEngine(urls, Thread.currentThread().getContextClassLoader());
 	}
 	
-	public void doWork(MaverickChangePlan changePlan) throws Exception {
-		String action = changePlan.getAction(); // xxx.yyy.xxx.command
-		Class<?> classToLoad = Class.forName(action, true, classLoader);
-		Method method = classToLoad.getDeclaredMethod("execute", Context.class);
+	private Class<?> loadClass(String name) throws Exception {
+		if(classCache.containsKey(name)) {
+			return classCache.get(name);
+		}
+		Class<?> cls = scriptEngine.loadScriptByName(name+".groovy");
+		classCache.put(name, cls);
+		return cls;
+	}
+	
+	public boolean doWork(MaverickChangePlan changePlan) throws Exception {
+		String action = changePlan.getAction();
+		Class<?> classToLoad = loadClass(action);
+		Method method = classToLoad.getDeclaredMethod("execute", Object.class);
 		Object instance = classToLoad.newInstance();
-		method.invoke(instance, context);
-	}
-	
-	public static void main(String[] args) throws Exception {
-		ExecutorCore core = new ExecutorCore("file://src/main/resources/actions-repository");
-		MaverickChangePlan changePlan = new MaverickChangePlan(new MaverickPolicy(null, "actions.HelloWorld", 0), null);
-		core.doWork(changePlan);
+		return (Boolean) method.invoke(instance, context);
 	}
 }
